<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_cream"
    tools:context=".AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/circle_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/app_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:justificationMode="inter_word"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UnusedAttribute" />

        <ImageView
            android:id="@+id/team_capstone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/capstone_team"
            app:layout_constraintTop_toBottomOf="@+id/app_desc"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:id="@+id/img_wahyu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wahyu"
            android:layout_marginTop="8dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/img_hasan"
            app:layout_constraintTop_toBottomOf="@id/team_capstone"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_wahyu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/wahyu"
            app:layout_constraintEnd_toStartOf="@+id/tv_hasan"
            app:layout_constraintTop_toBottomOf="@id/img_wahyu"
            app:layout_constraintStart_toStartOf="@id/img_wahyu"
            app:layout_constraintEnd_toEndOf="@id/img_wahyu"/>

        <ImageView
            android:id="@+id/img_hasan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hasan"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintStart_toEndOf="@+id/img_wahyu"
            app:layout_constraintTop_toBottomOf="@id/team_capstone"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_hasan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            android:text="@string/hasan"
            app:layout_constraintTop_toBottomOf="@+id/img_hasan"
            app:layout_constraintStart_toStartOf="@id/img_hasan"
            app:layout_constraintStart_toEndOf="@id/tv_wahyu"
            app:layout_constraintEnd_toEndOf="@id/img_hasan" />

        <ImageView
            android:id="@+id/img_aradea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/aradea"
            app:layout_constraintTop_toBottomOf="@id/tv_wahyu"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_aradea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:text="@string/aradea"
            app:layout_constraintStart_toEndOf="@id/tv_ivan"
            app:layout_constraintTop_toBottomOf="@id/img_aradea"
            app:layout_constraintStart_toStartOf="@id/img_aradea"
            app:layout_constraintEnd_toEndOf="@id/img_aradea"/>

        <ImageView
            android:id="@+id/img_ivan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ivan"
            app:layout_constraintTop_toBottomOf="@id/tv_wahyu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_ivan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textSize="11sp"
            android:text="@string/ivan"
            app:layout_constraintStart_toEndOf="@+id/tv_aradea"
            app:layout_constraintTop_toBottomOf="@id/img_ivan"
            app:layout_constraintStart_toStartOf="@id/img_ivan"
            app:layout_constraintEnd_toEndOf="@id/img_ivan"/>

        <ImageView
            android:id="@+id/img_diah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/diah"
            app:layout_constraintTop_toBottomOf="@id/tv_hasan"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_diah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textAlignment="center"
            android:textSize="11sp"
            android:text="@string/diah"
            app:layout_constraintStart_toEndOf="@id/tv_ivan"
            app:layout_constraintTop_toBottomOf="@id/img_diah"
            app:layout_constraintStart_toStartOf="@id/img_diah"
            app:layout_constraintEnd_toEndOf="@id/img_diah"/>

        <ImageView
            android:id="@+id/img_ardes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="70dp"
            android:src="@drawable/ardes"
            app:layout_constraintTop_toBottomOf="@id/tv_aradea"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_ardes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="@string/ardes"
            app:layout_constraintStart_toStartOf="@id/img_ardes"
            app:layout_constraintEnd_toEndOf="@+id/img_ardes"
            app:layout_constraintTop_toBottomOf="@+id/img_ardes"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/img_aryan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:src="@drawable/aryan"
            app:layout_constraintTop_toBottomOf="@id/tv_diah"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="11sp"
            android:text="@string/aryan"
            app:layout_constraintTop_toBottomOf="@id/img_aryan"
            app:layout_constraintStart_toStartOf="@id/img_aryan"
            app:layout_constraintEnd_toEndOf="@id/img_aryan"/>


        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/akal"
            android:textColor="@color/light_cream"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ardes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>